# doorstop

./: .pylint.ini  CHANGELOG.md  pyproject.toml
.github/: release.yml
.github/workflows/: change-coverage.yml  execute-tests.yml  release.yml  test-linux.yml  test-osx.yml  test-osx.yml.disabled  test-windows.yml
docs/reference/: document.md
doorstop/: settings.py
doorstop/cli/: commands.py  main.py
doorstop/cli/tests/: test_all.py
doorstop/core/: document.py  editor.py
doorstop/core/publishers/: html.py
doorstop/core/tests/: test_all.py  test_common.py  test_publisher.py  test_template.py
doorstop/core/vcs/: __init__.py  base.py
tools/: review.py
